Fixade bug på dark mode för stora skärmar

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@ html, body {
     margin: 0;
     padding: 0;
     height: 100%;
+    min-height: 100vh;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
-    color: inherit;
+    background-color: #1e1e1e;    color: inherit;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -22,6 +22,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f9;
     color: #333;
+    min-height: 100vh;
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
@@ -67,10 +68,6 @@ main {
     transition: background-color 0.3s ease, color 0.3s ease;
 }
 
-/* main.dark {
-    background-color: #1e1e1e;
-    color: #e0e0e0;
-} */
 
 button {
     background-color: #0056b3;
@@ -94,10 +91,6 @@ button:active {
     transform: scale(0.95);
 }
 
-/* .light {
-    background-color: #f9f9f9;
-    color: #333;
-} */
 
 footer {
     background-color: #333;
